--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,15 +5,13 @@ body{
 }
 
 nav{
-	width: 70%;
+	width: 70vw;
+	height: 20vh;
 	margin-left: auto;
 	margin-right: auto;
 	display: flex;
 	align-items: center;
 	justify-content: space-around;
-	padding:24px;
-	margin-top: 8px;
-	margin-bottom: 8px;
 }
 .nav-item{
 	width: 32%;
@@ -51,9 +49,10 @@ nav{
 
 #middle-section{
 	padding: 4px 32px;
+	height: 60vh;
 }
 #welcome-message{
-	max-width: 40%;
+	width: 40vw;
 	position: absolute;
 	left: 200px;
 	top: 150px;
