--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -81,9 +81,9 @@ nav{
 	top: 150px;
 	background:white;
 	width: 300px;
-	height: 400px;
+	height: 300px;
 	overflow: hidden;
-	border-radius: 70px;
+	border-radius: 50%;
 	margin: 0;
   	top: 50%;
   	-ms-transform: translateY(-50%);
